# reading-list-manager

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
books/: admin.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_publication_date.py  0003_alter_book_publication_date.py  0004_rename_publication_date_book_publication_year.py  0005_author_remove_book_author_book_authors.py
reading_list_manager/: asgi.py  settings.py  urls.py  wsgi.py
